# mugato

./: .gitignore  .gitmodules  README.md
examples/complex/proj.linux/: CMakeLists.txt
examples/complex/proj.windows/: mugato_complex.sln  mugato_complex.vcxproj
examples/complex/src/: Application.cpp
examples/gui/proj.android/: AndroidManifest.xml  build.gradle
examples/gui/proj.linux/: CMakeLists.txt
examples/gui/proj.windows/: mugato_gui.sln  mugato_gui.vcxproj
examples/gui/src/: Application.cpp
examples/label/assets/: font.fnt
examples/label/proj.linux/: CMakeLists.txt
examples/label/proj.windows/: mugato_label.sln
examples/label/src/: Application.cpp
examples/lighting/proj.android/: AndroidManifest.xml  settings.gradle
examples/lighting/proj.linux/: CMakeLists.txt
examples/lighting/proj.windows/: mugato_lighting.sln  mugato_lighting.vcxproj
examples/lighting/src/: Application.cpp
examples/particles/assets/: fire.pex
examples/particles/proj.windows/: mugato_particles.sln
examples/particles/src/: Application.cpp
examples/quadtree/assets/: shader.fsh  shader.vsh
examples/quadtree/proj.linux/: CMakeLists.txt
examples/quadtree/proj.windows/: mugato_quadtree.sln  mugato_quadtree.vcxproj.filters
examples/quadtree/src/: Application.cpp
examples/raycast/proj.linux/: CMakeLists.txt
examples/raycast/proj.windows/: mugato_raycast.sln  mugato_raycast.vcxproj
examples/raycast/src/: Application.cpp
examples/scene/assets/: character.plist
examples/scene/proj.android/: build.gradle
examples/scene/proj.linux/: CMakeLists.txt
examples/scene/proj.windows/: mugato_scene.sln  mugato_scene.vcxproj  mugato_scene.vcxproj.filters
examples/scene/src/: Application.cpp
examples/shooter/proj.linux/: CMakeLists.txt
examples/shooter/proj.windows/: mugato_shooter.sln
examples/shooter/src/: Application.cpp
examples/spine/proj.android/: AndroidManifest.xml  build.gradle
examples/spine/proj.linux/: CMakeLists.txt
examples/spine/proj.windows/: mugato_spine.sln  mugato_spine.vcxproj
examples/spine/src/: Application.cpp
examples/sprite/proj.linux/: CMakeLists.txt
examples/sprite/proj.windows/: mugato_sprite.sln
examples/sprite/src/: Application.cpp
lib/spine-c/: CMakeLists.txt
proj.android/mugato/: AndroidManifest.xml  build.gradle  settings.gradle
proj.android/mugato/jni/: Android.mk  Application.mk
proj.ios/mugato.xcodeproj/: project.pbxproj
proj.linux/: CMakeLists.txt
proj.windows/: mugato.sln  mugato.vcxproj  mugato.vcxproj.filters
src/mugato/: mugato.hpp
src/mugato/action/: Action.hpp  EmptyAction.cpp  EmptyAction.hpp  RemoveAction.cpp  RemoveAction.hpp  SequenceAction.cpp  (+3 more)
(+168 files in other folders)
